--- a/src/app/components/adminpage/adminpage.component.html
+++ b/src/app/components/adminpage/adminpage.component.html
@@ -1,17 +1,19 @@
 <div class="fadeInDown">
 
-  <div class="fadeIn first">
-    <h1 class="mainHeading">Admin Dashboard</h1>
+  <div class="wrapp fadeIn first">
+
+  
+    
+    <div class="header">
+      <h1 class="mainHeading">Admin Dashboard</h1>
+    </div>
+
+
+    <div>
+      <button  class="item2 analytics2 " (click)="openDialog(1)">Analytics</button>
+    </div>
+
   </div>
-
-
-
-  <div>
-    <button  class="item2 analytics2 " (click)="openDialog(1)">Analytics</button>
-  </div>
-
-
-
 
   <div class="fadeIn first">
     <h2 class="heading">Users</h2>
