--- a/src/app/components/store-check/store-check.component.html
+++ b/src/app/components/store-check/store-check.component.html
@@ -1,6 +1,6 @@
 <div class="menu fadeInDown">
     <div class="item start-sc fadeIn first" [routerLink]="['/chooseObject/addStoreCheck']">
-        Start Store Check
+        Store Check
     </div>
     <div class="item resolve-fb fadeIn second" [routerLink]="['/chooseObject/resolveFeedbacks']">
         Resolve Feedbacks
