--- a/src/app/dialogs/feedbackdialog/feedbackdialog.component.html
+++ b/src/app/dialogs/feedbackdialog/feedbackdialog.component.html
@@ -40,7 +40,7 @@
       <button mat-button *ngIf="resolveFeedbacks" type="submit" [mat-dialog-close]="1" (click)="submitForm()"
         [disabled]="!imageUploaded">Resolve</button>
 
-      <button mat-button (click)="close()">Close</button>
+      <button mat-button class="item2" (click)="close()">Close</button>
     </div>
   </form>
 </div>
