onSearchClicked da se prikazu tabele u admin page

--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -6,7 +6,7 @@
 
   </mat-form-field>
 </div>
-<div class="container mat-elevation-z8">
+<div class="container mat-elevation-z8" *ngIf="searchClicked">
 
 <mat-table #table [dataSource]="dataSource" matSort class="mat-cell">
 
