--- a/src/app/dialogs/feedback-create-dialog/feedback-create-dialog.component.css
+++ b/src/app/dialogs/feedback-create-dialog/feedback-create-dialog.component.css
@@ -58,3 +58,18 @@
   }
 }
 
+
+
+.test{
+  background-color: white;
+  color: #39ace7;
+  margin-bottom: 4%;
+  border: 2px solid #39ace7;
+}
+
+
+.test:hover {
+  color: #fff;
+  background-color: #39ace7;
+  transition: 0.3s;
+}
