--- a/src/app/dialogs/position-dialog/position-dialog.component.css
+++ b/src/app/dialogs/position-dialog/position-dialog.component.css
@@ -13,3 +13,16 @@
     font-size: 16px;
     flex-grow: 1;
 }
+.item2{
+    background-color: white;
+    color: #39ace7;
+    margin-bottom: 4%;
+    border: 2px solid #39ace7;
+  }
+
+  
+.item2:hover {
+    color: #fff;
+    background-color: #39ace7;
+    transition: 0.3s;
+  }
