--- a/src/app/dialogs/position-dialog/position-dialog.component.html
+++ b/src/app/dialogs/position-dialog/position-dialog.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <h3 mat-dialog-title *ngIf="flag == 1">Add secondary position</h3>
+    <h3 mat-dialog-title *ngIf="flag == 1">Add position</h3>
     <h3 mat-dialog-title *ngIf="flag == 2">Delete secondary position</h3>
     <form class="mat-dialog-content" #formControl="ngForm">
         <div class="form">
@@ -25,10 +25,10 @@
         </div>
 
         <div mat-dialog-actions>
-            <button mat-button *ngIf="flag == 1" type="submit" (click)="add()"
+            <button class="item2" mat-button *ngIf="flag == 1" type="submit" (click)="add()"
                 [disabled]="!formControl.valid">Ok</button>
             <button mat-button *ngIf="flag == 2" type="submit" (click)="delete()">Delete</button>
-            <button mat-button (click)="close()">Cancel</button>
+            <button mat-button  class="item2" (click)="close()">Cancel</button>
         </div>
     </form>
 </div>
