--- a/src/app/dialogs/retailerdialog/retailerdialog.component.html
+++ b/src/app/dialogs/retailerdialog/retailerdialog.component.html
@@ -17,9 +17,9 @@
 
 
           <div mat-dialog-actions>
-            <button mat-button type="submit" [mat-dialog-close]="1" *ngIf="flag != 3"(click)="submit()">Ok</button>
-            <button mat-button type="submit" [mat-dialog-close]="1" *ngIf="flag==3" (click)="delete()">Ok</button>
-            <button mat-button (click)="close()">Cancel</button>
+            <button class="test" mat-button type="submit" [mat-dialog-close]="1" *ngIf="flag != 3"(click)="submit()">Ok</button>
+            <button class="test" mat-button type="submit" [mat-dialog-close]="1" *ngIf="flag==3" (click)="delete()">Ok</button>
+            <button class="test" mat-button (click)="close()">Cancel</button>
           </div>
             </form>
   </div>
