--- a/src/app/dialogs/objectdialog/objectdialog.component.html
+++ b/src/app/dialogs/objectdialog/objectdialog.component.html
@@ -82,10 +82,10 @@
 
 
 <div mat-dialog-actions>
-  <button mat-button *ngIf="flag == 1" type="submit" [mat-dialog-close]="1" (click)="add()" [disabled]="!formControl.valid">Ok</button>
-  <button mat-button *ngIf="flag == 2" type="submit" [mat-dialog-close]="1"(click)="update()" [disabled]="!formControl.valid">Ok</button>
-  <button mat-button *ngIf="flag == 3" type="submit" [mat-dialog-close]="1"(click)="delete()">Delete</button>
-  <button mat-button (click)="close()">Cancel</button>
+  <button mat-button class="item2" *ngIf="flag == 1" type="submit" [mat-dialog-close]="1" (click)="add()" [disabled]="!formControl.valid">Ok</button>
+  <button mat-button class="item2" *ngIf="flag == 2" type="submit" [mat-dialog-close]="1"(click)="update()" [disabled]="!formControl.valid">Ok</button>
+  <button mat-button class="item2" *ngIf="flag == 3" type="submit" [mat-dialog-close]="1"(click)="delete()">Delete</button>
+  <button mat-button class="item2" (click)="close()">Cancel</button>
 </div>
   </form>
   </div>
