--- a/src/app/dialogs/userdialog/userdialog.component.css
+++ b/src/app/dialogs/userdialog/userdialog.component.css
@@ -1,2 +1,15 @@
 /*@import '~@angular/material/prebuilt-themes/indigo-pink.css';
 */
+.test{
+    background-color: white;
+    color: #39ace7;
+    margin-bottom: 4%;
+    border: 2px solid #39ace7;
+  }
+  
+  
+  .test:hover {
+    color: #fff;
+    background-color: #39ace7;
+    transition: 0.3s;
+  }
