--- a/src/app/dialogs/userdialog/userdialog.component.html
+++ b/src/app/dialogs/userdialog/userdialog.component.html
@@ -30,10 +30,10 @@
 </div>
 
 <div mat-dialog-actions>
-  <button mat-button *ngIf="flag == 1" type="submit" [mat-dialog-close]="1" (click)="add()" [disabled]="!formControl.valid">Ok</button>
-  <button mat-button *ngIf="flag == 2" type="submit" [mat-dialog-close]="1"(click)="update()" [disabled]="!formControl.valid">Ok</button>
-  <button mat-button *ngIf="flag == 3" type="submit" [mat-dialog-close]="1"(click)="delete()">Delete</button>
-  <button mat-button (click)="close()">Cancel</button>
+  <button mat-button class="test" *ngIf="flag == 1" type="submit" [mat-dialog-close]="1" (click)="add()" [disabled]="!formControl.valid">Ok</button>
+  <button mat-button class="test" *ngIf="flag == 2" type="submit" [mat-dialog-close]="1"(click)="update()" [disabled]="!formControl.valid">Ok</button>
+  <button mat-button class="test" *ngIf="flag == 3" type="submit" [mat-dialog-close]="1"(click)="delete()">Delete</button>
+  <button mat-button class="test" (click)="close()">Cancel</button>
 </div>
   </form>
   </div>
