--- a/src/app/components/store-check-page/store-check-page.component.css
+++ b/src/app/components/store-check-page/store-check-page.component.css
@@ -11,7 +11,7 @@
     width: 400px;
     margin: 0 auto;
     padding: 0 20px;
-    max-width: 100%;
+    max-width: 80%;
 }
 
 .header i {
@@ -22,10 +22,16 @@
     margin: 0 0 0 auto;
 }
 
+.object-info-data {
+    max-width: 100%;
+}
+
 .header .obj-info {
     width: 400px;
     text-align: left;
     margin: 0 auto;
+    max-width: 100%;
+    padding: 0 5px;
 }
 
 .header .obj-info ul {
@@ -37,8 +43,16 @@
     margin-top: 10px;
 }
 
-.header table, th, td {
+.object-info-tables table {
+    table-layout: fixed;
+     max-width: 100%;
+}
+
+.header table,
+th,
+td {
     border: 1px solid #fff;
+    overflow: hidden;
 }
 
 .info-table {
@@ -75,7 +89,8 @@
 .add-fb-btn {
     border-radius: 20px;
     border: 2px solid #39ace7;
-    background-color: #39ace7;;
+    background-color: #39ace7;
+    ;
     color: #fff;
     width: 200px;
     padding: 10px 0;
@@ -96,7 +111,7 @@
     margin-top: 80px;
 }
 
-.secondary-positions td{
+.secondary-positions td {
     border: 1px solid grey;
 }
 
@@ -124,11 +139,12 @@
 .btn-finish {
     border-radius: 20px;
     border: 2px solid #39ace7;
-    background-color: #39ace7;;
+    background-color: #39ace7;
+    ;
     color: #fff;
     width: 200px;
     padding: 10px 0;
-    margin: 30px ;
+    margin: 30px;
     cursor: pointer;
 }
 
@@ -142,10 +158,10 @@
     border: 1px solid grey;
 }
 
-  /* ANIMATIONS */
-  
-  /* Simple CSS3 Fade-in-down Animation */
-  .fadeInDown {
+/* ANIMATIONS */
+
+/* Simple CSS3 Fade-in-down Animation */
+.fadeInDown {
     font-family: sans-serif;
     -webkit-animation-name: fadeInDown;
     animation-name: fadeInDown;
@@ -153,75 +169,103 @@
     animation-duration: 1s;
     -webkit-animation-fill-mode: both;
     animation-fill-mode: both;
-  }
-  
-  @-webkit-keyframes fadeInDown {
+}
+
+@-webkit-keyframes fadeInDown {
     0% {
-      opacity: 0;
-      -webkit-transform: translate3d(0, -100%, 0);
-      transform: translate3d(0, -100%, 0);
+        opacity: 0;
+        -webkit-transform: translate3d(0, -100%, 0);
+
+        transform: translate3d(0, -100%, 0);
     }
+
     100% {
-      opacity: 1;
-      -webkit-transform: none;
-      transform: none;
+        opacity: 1;
+        -webkit-transform: none;
+        transform: none;
     }
-  }
-  
-  @keyframes fadeInDown {
+}
+
+@keyframes fadeInDown {
     0% {
-      opacity: 0;
-      -webkit-transform: translate3d(0, -100%, 0);
-      transform: translate3d(0, -100%, 0);
+        opacity: 0;
+        -webkit-transform: translate3d(0, -100%, 0);
+        transform: translate3d(0, -100%, 0);
     }
+
     100% {
-      opacity: 1;
-      -webkit-transform: none;
-      transform: none;
+        opacity: 1;
+        -webkit-transform: none;
+        transform: none;
     }
-  }
-  
-  /* Simple CSS3 Fade-in Animation */
-  @-webkit-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
-  @-moz-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
-  @keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
-  
-  .fadeIn {
-    opacity:0;
-    -webkit-animation:fadeIn ease-in 1;
-    -moz-animation:fadeIn ease-in 1;
-    animation:fadeIn ease-in 1;
-  
-    -webkit-animation-fill-mode:forwards;
-    -moz-animation-fill-mode:forwards;
-    animation-fill-mode:forwards;
-  
-    -webkit-animation-duration:1s;
-    -moz-animation-duration:1s;
-    animation-duration:1s;
-  }
-  
-  .fadeIn.first {
+}
+
+/* Simple CSS3 Fade-in Animation */
+@-webkit-keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
+}
+
+@-moz-keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
+}
+
+.fadeIn {
+    opacity: 0;
+    -webkit-animation: fadeIn ease-in 1;
+    -moz-animation: fadeIn ease-in 1;
+    animation: fadeIn ease-in 1;
+
+    -webkit-animation-fill-mode: forwards;
+    -moz-animation-fill-mode: forwards;
+    animation-fill-mode: forwards;
+
+    -webkit-animation-duration: 1s;
+    -moz-animation-duration: 1s;
+    animation-duration: 1s;
+}
+
+.fadeIn.first {
     -webkit-animation-delay: 0.4s;
     -moz-animation-delay: 0.4s;
     animation-delay: 0.4s;
-  }
-  
-  .fadeIn.second {
+}
+
+.fadeIn.second {
     -webkit-animation-delay: 0.6s;
     -moz-animation-delay: 0.6s;
     animation-delay: 0.6s;
-  }
-  
-  .fadeIn.third {
+}
+
+.fadeIn.third {
     -webkit-animation-delay: 0.8s;
     -moz-animation-delay: 0.8s;
     animation-delay: 0.8s;
-  }
-  
-  .fadeIn.fourth {
+}
+
+.fadeIn.fourth {
     -webkit-animation-delay: 1s;
     -moz-animation-delay: 1s;
     animation-delay: 1s;
-  }
-  
+}
