css dialogs disabled

--- a/src/app/dialogs/feedbackdialog/feedbackdialog.component.css
+++ b/src/app/dialogs/feedbackdialog/feedbackdialog.component.css
@@ -39,8 +39,11 @@
   margin-top: 1%;
 }
 
-.item2:hover {
-  background-color: #39ace7;
+button:hover {
   color: #fff;
+  background-color: #39ace7;
   transition: 0.3s;
+}
+button[disabled]:hover {
+ background-color: #fff;
 }
