--- a/src/app/components/adminpage/adminpage.component.html
+++ b/src/app/components/adminpage/adminpage.component.html
@@ -15,24 +15,24 @@
 
   </div>
 
-  <div class="fadeIn first">
+  <div class="fadeIn second">
     <h2 class="heading">Users</h2>
     <app-user></app-user>
   </div>
 
-  <div class="fadeIn first">
+  <div class="fadeIn third">
     <h2 class="heading">Objects</h2>
     <app-object [isAdmin]="true"></app-object>
   </div>
 
-  <div class="fadeIn first">
+  <div class="fadeIn third">
     <h2 class="heading">Retailers</h2>
     <app-retailer></app-retailer>
   </div>
 
 
 
-  <div class="fadeIn second">
+  <div class="fadeIn third">
     <h2 class="heading">Import Excel</h2>
 
 
@@ -69,7 +69,7 @@
 
 
 
-  <div class="fadeIn third">
+  <div class="fadeIn fourth">
     <a [routerLink]="['/login']">
       <div class="item2">
         Log out
