--- a/src/app/dialogs/feedback-create-dialog/feedback-create-dialog.component.css
+++ b/src/app/dialogs/feedback-create-dialog/feedback-create-dialog.component.css
@@ -68,8 +68,11 @@
 }
 
 
-.test:hover {
+button:hover {
   color: #fff;
   background-color: #39ace7;
   transition: 0.3s;
+}
+button[disabled]:hover {
+ background-color: #fff;
 }
