--- a/src/app/dialogs/objectdialog/objectdialog.component.css
+++ b/src/app/dialogs/objectdialog/objectdialog.component.css
@@ -6,8 +6,11 @@
   }
 
   
-.item2:hover {
+  button:hover {
     color: #fff;
     background-color: #39ace7;
     transition: 0.3s;
-  }
+}
+button[disabled]:hover {
+   background-color: #fff;
+}
