--- a/src/app/dialogs/userdialog/userdialog.component.css
+++ b/src/app/dialogs/userdialog/userdialog.component.css
@@ -3,13 +3,21 @@
 .test{
     background-color: white;
     color: #39ace7;
-    margin-bottom: 4%;
+    margin-top: -13%;
     border: 2px solid #39ace7;
+    
   }
   
-  
-  .test:hover {
+/*h3{
+    color: #39ace7;
+}*/
+
+
+  button:hover {
     color: #fff;
     background-color: #39ace7;
     transition: 0.3s;
-  }
+}
+button[disabled]:hover {
+   background-color: #fff;
+}
