vracena zaglavlja admin

--- a/src/app/components/adminpage/adminpage.component.css
+++ b/src/app/components/adminpage/adminpage.component.css
@@ -25,6 +25,8 @@
   background-color: #db202f;
   padding: 8px 16px;
 }
+
+
 .container h3 {
   font-size: 20px;
   font-weight: 600;
@@ -230,7 +232,15 @@
   }
 
   .browseButton{
+    z-index: 100;
     background-color:#56baed;
+    width:50px;
+    display: inline-block;
+  }
+
+  .browseButton:hover{
+    z-index: 100;
+    background-color:gray;
     width:50px;
     display: inline-block;
   }
