--- a/src/app/components/adminpage/adminpage.component.html
+++ b/src/app/components/adminpage/adminpage.component.html
@@ -2,19 +2,37 @@
 
   <div class="wrapp fadeIn first">
 
-  
-    
+
+
     <div class="header">
       <h1 class="mainHeading">Admin Dashboard</h1>
-    </div>
+      <div class="menu" style="display:flex;">
+
+        <div class="fadeIn fourth">
+
+            <div class="item2" onclick="openDialog(1)">
+              Analytics
+            </div>
+        </div>
+
+        <div class="fadeIn fourth">
+          <a [routerLink]="['/login']">
+            <div class="item2">
+              Log out
+            </div>
+          </a>
+        </div>
+      </div>
+
+</div>
 
 
-    <div>
-      <button  class="item2 analytics2 " (click)="openDialog(1)">Analytics</button>
-    </div>
 
   </div>
-
+  <br>
+  <br>
+<br>
+<br>
   <div class="fadeIn second">
     <h2 class="heading">Users</h2>
     <app-user></app-user>
@@ -39,7 +57,6 @@
 
     <div class="parentcontainer">
 
-
       <div class="container">
         <h3 class="uploadHeading">Objects</h3>
         <input type="file" #fileDropRef (change)="uploadObjectsFile($event)" id="fileDropRef" />
@@ -47,10 +64,7 @@
 
         <h3 style="margin:5%">Drag and drop file here</h3>
 
-
-  <label for="fileDropRef" class="browseButton" style="background-color:#56baed">Browse</label>
-
-
+<label for="fileDropRef" class="browseButton">Browse</label>
       </div>
 
 
@@ -67,16 +81,6 @@
 
     </div>
 
-  </div>
-
-
-
-  <div class="fadeIn fourth">
-    <a [routerLink]="['/login']">
-      <div class="item2">
-        Log out
-      </div>
-    </a>
   </div>
 
 </div>
