--- a/src/app/dialogs/feedback-create-dialog/feedback-create-dialog.component.html
+++ b/src/app/dialogs/feedback-create-dialog/feedback-create-dialog.component.html
@@ -19,13 +19,14 @@
             </mat-form-field>
         </div>
 
-       
+
         <form [formGroup]="form" (ngSubmit)="submitForm()">
-            <input type="file"  (change)="uploadFile($event)" accept="image/*" capture="camera" fromControlName="file" required>
+            <input type="file" id="inputFile" (change)="uploadFile($event)" accept="image/*" capture="camera" fromControlName="file" required hidden>
+            <label for="inputFile" class="browseFile"> Photo</label>
         </form>
         <div mat-dialog-actions class="wrap">
             <button mat-button class="test" type="submit" [mat-dialog-close]="1" (click)="submitForm()" [disabled]="!formControl.valid || !imageUploaded"><span class="feedbackSpan"><a onmouseover="this.style.color='white';" onmouseout="this.style.color='#39ace7'">Add</a></span></button>
-       
+
             <button mat-button class="test" (click)="close()">Close</button>
            </div>
     </form>
