--- a/src/app/components/resolved-feedback/resolved-feedback.component.html
+++ b/src/app/components/resolved-feedback/resolved-feedback.component.html
@@ -50,5 +50,5 @@
   </mat-table>
   <mat-paginator [length]="length" [pageSize]="count" (page)="loadDataOnPageEvent($event)"></mat-paginator>
 </div>
-<div class="fadeIn third"> <button class="item2" >Exit</button> </div>
+<div class="fadeIn third"> <button class="item2" (click)="back()">Exit</button> </div>
 </div>
