--- a/src/app/components/object/object.component.html
+++ b/src/app/components/object/object.component.html
@@ -52,9 +52,12 @@
             delete </mat-icon>
         </button>
 
-        <button mat-icon-button color="primary" *ngIf="!isAdmin">
+        <!-- <button mat-icon-button color="primary" *ngIf="!isAdmin">
           <mat-icon area-label="Open" [routerLink]="['/storeCheckPage', workModel, row.objectName]">open_in_new
           </mat-icon>
+        </button> -->
+        <button class="choose-btn" mat-button color="primary" *ngIf="!isAdmin" [routerLink]="['/storeCheckPage', workModel, row.objectName]">
+          Choose
         </button>
       </mat-cell>
     </ng-container>
