--- a/src/app/components/resolved-feedback/resolved-feedback.component.html
+++ b/src/app/components/resolved-feedback/resolved-feedback.component.html
@@ -1,6 +1,6 @@
-<div class="container mat-elevation-z8 font fadeInDown">
+<div class="container font fadeInDown">
 
-  <div class="fadeIn first"><h1>Resolved feedbacks</h1></div>
+  <div class="fadeIn first header"><h1>Resolved feedbacks</h1></div>
   <div class="fadeIn second">
   <mat-table #table [dataSource]="dataSource" matSort class="mat-cell">
 
