--- a/src/app/components/store-check-page/store-check-page.component.html
+++ b/src/app/components/store-check-page/store-check-page.component.html
@@ -65,7 +65,7 @@
         <app-position [objectName]="objectName" [resolveFeedbacks]="resolveFeedbacks"></app-position>
 
         <button class="btn-finish" [routerLink]="['/chooseObject', workModel]"
-            (click)="finishObjectStoreCheck()">FINISH OBJECT</button>
+            (click)="finishObjectStoreCheck()">ADD TO STORECHECK</button>
         
         <button class="btn-finish" [routerLink]="['/chooseObject', workModel]">EXIT</button>
     </div>
