--- a/src/app/components/feedback/feedback.component.css
+++ b/src/app/components/feedback/feedback.component.css
@@ -51,11 +51,11 @@ h1{
   font-size: 15px;
   border: 2px solid #39ace7;
   cursor: pointer;
-  margin: 0 auto;
+  margin:  auto;
   position: relative;
   bottom: 0;
-  margin-bottom: 1%;
-  margin-top: 1%;
+  margin-bottom: 4%;
+  margin-top: 5%;
 }
 
 .item1{
