--- a/src/app/components/resolved-feedback/resolved-feedback.component.css
+++ b/src/app/components/resolved-feedback/resolved-feedback.component.css
@@ -2,13 +2,7 @@
   margin: 0 20px;
 }
 
-h1{
-    color: #39ace7;
-    text-align: center;
-    margin-top: 40px;
-    margin-top: 10%;
-    margin-bottom: 5%;
-}
+
 #editBtn{
     margin: 20px;
 }
@@ -16,23 +10,28 @@ h1{
   font-family: sans-serif;
 }
 .button {
-   
-    color: white;
-    background-color: blue;
-    padding: 4px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 4px 2px;
-    transition-duration: 0.4s;
-    cursor: pointer;
-    border-radius: 2px;
-  }
+  color: white;
+  background-color: blue;
+  padding: 4px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  transition-duration: 0.4s;
+  cursor: pointer;
+  border-radius: 2px;
+}
 
-  .header{
-    margin-top: -5%;
-  }
+  
+  .header {
+  text-align: center;
+  height: 100px;
+  background-color: #56baed;
+  color: #fff;
+  line-height: 100px;
+}
+
   
   
 .item2{
