--- a/src/app/components/adminpage/adminpage.component.html
+++ b/src/app/components/adminpage/adminpage.component.html
@@ -10,7 +10,7 @@
 
         <div class="fadeIn fourth">
 
-            <div class="item2" onclick="openDialog(1)">
+            <div class="item2" (click)="openDialog(1)">
               Analytics
             </div>
         </div>
