--- a/src/app/components/store-check-page/store-check-page.component.html
+++ b/src/app/components/store-check-page/store-check-page.component.html
@@ -60,14 +60,13 @@
 
     <div class="main fadeIn second">
         <h3>UNRESOLVED FEEDBACKS:</h3>
-        <app-feedback [objectName]="objectName" [resolveFeedbacks]="resolveFeedbacks"></app-feedback>
+        <app-feedback [objectName]="objectName" [resolveFeedbacks]="resolveFeedbacks" (showFinishButton)="enableFinishButton($event)"></app-feedback>
         <h3>SECONDARY POSITIONS:</h3>
-        <app-position [objectName]="objectName" [resolveFeedbacks]="resolveFeedbacks"></app-position>
+        <app-position [objectName]="objectName" [resolveFeedbacks]="resolveFeedbacks" (showFinishButton)="enableFinishButton($event)"></app-position>
 
-        <button class="btn-finish" [routerLink]="['/chooseObject', workModel]"
+        <button class="btn-finish" [routerLink]="['/chooseObject', workModel]" *ngIf="showFinishButton"
             (click)="finishObjectStoreCheck()">ADD TO STORECHECK</button>
-        
-        <button class="btn-finish" [routerLink]="['/chooseObject', workModel]">EXIT</button>
+        <button class="btn-finish" (click)="exit()">EXIT</button>
     </div>
 
 
