--- a/src/app/components/object/object.component.html
+++ b/src/app/components/object/object.component.html
@@ -14,22 +14,22 @@
   <mat-table #table [dataSource]="dataSource" matSort class="mat-cell" *ngIf="dataSource">
 
     <ng-container matColumnDef="objectIdRetail">
-      <mat-header-cell *matHeaderCellDef mat-sort-header>ObjectIdRetail</mat-header-cell>
+      <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext">ObjectIdRetail</mat-header-cell>
       <mat-cell *matCellDef="let row">{{ row.objectIdRetail }}</mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="objectIdCompany">
-      <mat-header-cell *matHeaderCellDef mat-sort-header>ObjectIdCompany</mat-header-cell>
+      <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext">ObjectIdCompany</mat-header-cell>
       <mat-cell *matCellDef="let row">{{ row.objectIdCompany }}</mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="objectName">
-      <mat-header-cell *matHeaderCellDef mat-sort-header>ObjectName</mat-header-cell>
+      <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext">ObjectName</mat-header-cell>
       <mat-cell *matCellDef="let row">{{ row.objectName }}</mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="address">
-      <mat-header-cell *matHeaderCellDef mat-sort-header>Address</mat-header-cell>
+      <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext">Address</mat-header-cell>
       <mat-cell *matCellDef="let row">{{ row.address }}</mat-cell>
     </ng-container>
 
@@ -38,7 +38,7 @@
     <ng-container matColumnDef="actions">
       <mat-header-cell *matHeaderCellDef>
         <button mat-icon-button color="primary" *ngIf="isAdmin">
-          <mat-icon (click)="openDialog(1)">add</mat-icon>
+          <mat-icon (click)="openDialog(1)" class="whitetext">add</mat-icon>
         </button>
       </mat-header-cell>
       <mat-cell *matCellDef="let row; let i=index">
