--- a/src/app/components/retailer/retailer.component.css
+++ b/src/app/components/retailer/retailer.component.css
@@ -6,16 +6,18 @@
   text-align:center;
 }
 
-.font{
-  font-family: sans-serif;
-}
+
 
 .search{
   color:white;
   background-color:#56baed;
+  margin: 1%;
 
 }
 
 .container {
   margin: 0 20px;
+}
+.whitetext{
+  color:white;
 }
