--- a/src/app/components/retailer/retailer.component.html
+++ b/src/app/components/retailer/retailer.component.html
@@ -9,12 +9,12 @@
 <mat-table #table [dataSource]="dataSource" matSort class="mat-cell">
 
   <ng-container matColumnDef="retailerName">
-    <mat-header-cell *matHeaderCellDef mat-sort-header>Name</mat-header-cell>
+    <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext">Name</mat-header-cell>
     <mat-cell *matCellDef="let row">{{ row.retailerName }}</mat-cell>
   </ng-container>
 
   <ng-container matColumnDef="planogramPdf">
-    <mat-header-cell *matHeaderCellDef mat-sort-header>Planogram</mat-header-cell>
+    <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext">Planogram</mat-header-cell>
     <mat-cell *matCellDef="let row">{{ row.planogramPdf }}</mat-cell>
   </ng-container>
 
@@ -23,7 +23,7 @@
   <ng-container matColumnDef="actions">
     <mat-header-cell *matHeaderCellDef>
       <button mat-icon-button color="primary">
-<mat-icon (click)="openDialog(1)">add</mat-icon>
+<mat-icon (click)="openDialog(1)" class="whitetext">add</mat-icon>
       </button>
     </mat-header-cell>
     <mat-cell *matCellDef="let row; let i=index">
