--- a/src/app/components/adminpage/adminpage.component.html
+++ b/src/app/components/adminpage/adminpage.component.html
@@ -5,7 +5,9 @@
 
 
     <div class="header ">
+      <div class="l">
       <h1 class="mainHeading">Admin Dashboard</h1>
+    </div>
       <div class="menu" style="display:flex;">
 
         <div class="fadeIn fourth">
