--- a/src/app/components/object/object.component.css
+++ b/src/app/components/object/object.component.css
@@ -25,13 +25,14 @@ h4 {
 
 .container {
   text-align: center;
-  padding: 0 20px;
 }
 
 .adr-name-search {
   padding-top: 20px;
 }
-
+.mat-header-cell{
+  text-align: center;
+}
 /*.adr-name-search mat-form-field {
   width: 300px;
   max-width: 90%;
@@ -59,6 +60,7 @@ h4 {
   margin: 0 auto;
 }
 
+
 .search{
   color:white;
   background-color:#56baed;
@@ -79,6 +81,45 @@ h4 {
   color:white;
 }
 
-::placeholder{
-  color: #56baed;
+
+
+table{
+  width: 100%;
+ }
+
+.mat-column-objectName {
+  word-wrap: break-word !important;
+  white-space: unset !important;
+  flex: 0 0 17% !important;
+  width: 17% !important;
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+
+  word-break: break-word;
+
+  -ms-hyphens: auto;
+  -moz-hyphens: auto;
+  -webkit-hyphens: auto;
+  hyphens: auto;
+  
+  text-align: left;
 }
+
+.mat-column-address {
+  word-wrap: break-word !important;
+  white-space: unset !important;
+  flex: 0 0 30% !important;
+  width: 30% !important;
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+
+  word-break: break-word;
+
+  -ms-hyphens: auto;
+  -moz-hyphens: auto;
+  -webkit-hyphens: auto;
+  hyphens: auto;
+
+  text-align: left;
+}
+
